-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs24
-
Component/s: hotspot
-
b41
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8018106 | 7u45 | Rickard Backman | P3 | Closed | Fixed | b01 |
| JDK-8013077 | 7u40 | Rickard Backman | P3 | Closed | Fixed | b22 |
Currently we define a type TracingTime and a method Tracing::time() when compiling with INCLUDE_TRACE. To avoid having code that looks like
#ifdef INCLUDE_TRACE
TracingTime t = Tracing::time();
...
#endif
we should make the TracingTime type available when INCLUDE_TRACE isn't defined and Tracing::time() should be a no-op.
#ifdef INCLUDE_TRACE
TracingTime t = Tracing::time();
...
#endif
we should make the TracingTime type available when INCLUDE_TRACE isn't defined and Tracing::time() should be a no-op.
- backported by
-
JDK-8013077 Make TracingTime available when INCLUDE_TRACE = 0
-
- Closed
-
-
JDK-8018106 Make TracingTime available when INCLUDE_TRACE = 0
-
- Closed
-