8012210: Make TracingTime available when INCLUDE_TRACE = 0 Reviewed-by: dholmes, sla